# IndoorPersonalLocator

./: .clang-format  .gitignore  .gitmodules  README.md  datapoints4011A.csv  datapoints4011B.csv  datapoints4011C.csv  datapoints4011D.csv  datapoints4011E.csv  datapoints4011F.csv  datapoints4011G.csv  datapoints4011H.csv  datapoints4011I.csv  datapoints4011J.csv  datapoints4011K.csv  datapoints4011L.csv  datapoints4011k.csv  datapointstest0.csv  datapointstest10.csv  datapointstest11.csv  datapointstest12.csv  datapointstest14.csv  datapointstest16.csv  datapointstest2.csv  datapointstest3.csv  datapointstest4.csv  datapointstest5.csv  datapointstest6.csv  datapointstest7.csv  datapointstest8.csv
data_meter/: datapoints4011C.csv  datapoints4011I.csv  datapoints4011J.csv  datapoints4011L.csv
oslib/: README.md
oslib/ahu_drivers/ahu_ble/: ble_base.c  ble_base.h
oslib/ahu_drivers/ahu_data/: ahu_data.c
oslib/ahu_drivers/ahu_shell/: shell_base.c  shell_scu.c
oslib/base_drivers/: ble_base.c  ble_base.h  data_base.c  data_base.h  shell_base.c  shell_base.h
oslib/common/: ble_uuid.h  hci_driver.c  hci_driver.h  log_driver.h  pb_driver.c
oslib/mobile_drivers/ble_mobile/: ble_mobile.c  ble_mobile.h  ble_mobile_scan.c  ble_mobile_scan.h  imu_mobile.c  imu_mobile.h  mobile_ble.c  mobile_ble.h
oslib/mobile_drivers/imu_mobile/: hal_imu.c  hal_imu.h  imu_mobile.c
oslib/static_drivers/ble_static/: static_ble.c  static_ble.h
oslib/static_drivers/ultrasonic_static/: ultrasonic_static.c  ultrasonic_static.h
other/: dumpground_dashboard_testcode.py
other/Bostons_AHU/: README.md
other/Bostons_AHU/oslib/ahu_drivers/ahu_ble/: ble_commands.c  ble_commands.h  bluetooth_driver.c  bluetooth_driver.h  hci.c  hci.h
other/Bostons_AHU/oslib/ahu_drivers/ahu_button/: button_driver.c  button_driver.h
other/Bostons_AHU/oslib/ahu_drivers/ahu_rgb/: rgb_driver.c  rgb_driver.h
other/Bostons_AHU/oslib/ahu_drivers/ahu_shell/: shell_driver.c  shell_driver.h
other/Bostons_AHU/oslib/ahu_drivers/ahu_timing/: time_driver.c  time_driver.h
other/Bostons_AHU/prac1/ahu/: CMakeLists.txt  prj.conf
other/Bostons_AHU/prac1/ahu/mqtt/: mqttPub.py
other/Bostons_AHU/prac1/ahu/src/: main.c
other/Combined/oslib/ahu_drivers/ahu_ble/: ble_base.c
other/Combined/oslib/ahu_drivers/ahu_shell/: shell_scu.c
other/Liana_SCU/oslib/scu_drivers/scu_ble/: scu_ble.c  scu_ble.h
other/Liana_SCU/oslib/scu_drivers/scu_io/: scu_io.c  scu_io.h
other/Liana_SCU/oslib/scu_drivers/scu_sensors/: scu_sensors.c  scu_sensors.h
other/Liana_SCU/prac1/scu/: CMakeLists.txt  app.overlay  prj.conf
other/Liana_SCU/prac1/scu/src/: main.c
other/Ultrasonic/: CMakeLists.txt  prj.conf
other/Ultrasonic/src/: ultrasonic.c
other/WeatherStationIoT/oslib/common/: ble_uuid.h
other/WeatherStationIoT/prac1/ahu/src/: main.c
p2a/: README.md
p2a/application/: KNN.py  README.md  app.py  comm.py  data.py  global_.py  gui.py  kalman.py  mqtt.py  tracking.py
p2a/application/Datapoints/: combined.csv  datapoints0.csv  datapoints1.csv  datapoints10.csv  datapoints12.csv  datapoints13.csv  datapoints14.csv  datapoints15.csv  datapoints17.csv  datapoints19.csv  datapoints2.csv  datapoints20.csv  datapoints22.csv  datapoints23.csv  datapoints26.csv  datapoints27.csv  datapoints3.csv  datapoints30.csv  datapoints31.csv  datapoints33.csv  datapoints34.csv  datapoints35.csv  datapoints36.csv  datapoints39.csv  datapoints40.csv  datapoints41.csv  datapoints42.csv  datapoints43.csv  datapoints44.csv  datapoints46.csv  datapoints47.csv  datapoints6.csv  datapoints8.csv  datapointsKNN.csv  datapointstest1.csv  datapointstest13.csv  datapointstest14.csv  datapointstest9.csv
p2a/base_node/: CMakeLists.txt  README.md  shell.conf  usb_cdc.conf
p2a/base_node/src/: main.c  main.h
p2a/node/: README.md
p2a/node/src/: main.h
p2a/static_mobile_node/: CMakeLists.txt  README.md  bt.conf  datapoints11.csv  datapoints16.csv  datapoints18.csv  datapoints21.csv  datapoints24.csv  datapoints25.csv  datapoints28.csv  datapoints29.csv  datapoints32.csv  datapoints37.csv  datapoints38.csv  datapoints4.csv  datapoints45.csv  datapoints48.csv  datapoints5.csv  datapoints7.csv  datapoints9.csv  flash.sh  prj.conf
p2a/static_mobile_node/src/: main.c  main.h
